[gd_scene load_steps=10 format=3 uid="uid://cjpuaslk4snkw"]

[ext_resource type="Script" uid="uid://chbc5x46o2anv" path="res://project/scripts/snake.gd" id="1_66od3"]
[ext_resource type="Texture2D" uid="uid://bag45r7s6613n" path="res://project/images/Body.png" id="2_svp7d"]
[ext_resource type="Texture2D" uid="uid://hvqti2vmv7mi" path="res://project/images/Head.png" id="2_xgrlx"]
[ext_resource type="AudioStream" uid="uid://0xonaixk8voh" path="res://project/sounds/eatSound.mp3" id="4_fdxhw"]
[ext_resource type="AudioStream" uid="uid://b8f7s4pu4g18p" path="res://project/sounds/speedUpSound1.2_segment_0s0_to_0s3.mp3" id="5_gfo8o"]
[ext_resource type="AudioStream" uid="uid://dibnogvacilh8" path="res://project/sounds/deathSound.mp3" id="6_4yf5m"]
[ext_resource type="AudioStream" uid="uid://dmv2k8r2wnid2" path="res://project/sounds/territoryCaptureSound.mp3" id="7_v8h33"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xgrlx"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_svp7d"]
radius = 16.0

[node name="Snake" type="Node2D"]
script = ExtResource("1_66od3")

[node name="Body" type="Node2D" parent="."]

[node name="part1" type="Sprite2D" parent="Body"]
position = Vector2(0, 1)
rotation = 1.5708
texture = ExtResource("2_svp7d")

[node name="StaticBody2D" type="StaticBody2D" parent="Body/part1" groups=["Snake"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/part1/StaticBody2D"]
shape = SubResource("CircleShape2D_xgrlx")

[node name="Head" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_xgrlx")

[node name="Camera2D" type="Camera2D" parent="Head"]
rotation = -1.5708
enabled = false
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true

[node name="Mouth" type="Area2D" parent="Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/Mouth"]
visible = false
position = Vector2(-4, 1.74846e-07)
shape = SubResource("CircleShape2D_svp7d")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fdxhw")
volume_db = -15.0

[node name="SpeedUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gfo8o")
volume_db = -15.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4yf5m")
volume_db = -15.0

[node name="TerritoryCaptureSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v8h33")
volume_db = -15.0

[connection signal="body_entered" from="Head/Mouth" to="." method="_in_mouth_body_entered"]
